# codecrafters-kafka-rust

./: Cargo.toml  README.md
src/: kafka.rs  main.rs
src/kafka/: codec.rs  misc.rs  proto.rs  request.rs  response.rs  types.rs
src/kafka/request/: api_versions_v4.rs  describe_topic_partitions_v0.rs  generic_request.rs
src/kafka/response/: api_versions_v3.rs  api_versions_v4.rs  common.rs  generic_response.rs  response_header_v0.rs
src/kafka/types/: api_keys.rs  compact_array.rs  compact_nullable_string.rs  compact_string.rs  error_codes.rs  helper.rs  nullable_string.rs  tag_buffer.rs  unsigned_varint.rs
src/kafka/types/helper/: pos_marker.rs
