[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
anyhow = "1"                                # error handling
bytes = "~1.8"                                  # helps manage buffers
thiserror = "2"                             # error handling
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "~0.7", features = ["codec"] }
binrw = { version = "~0.14" }