[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
anyhow = "1"                                # error handling
bytes = "~1.8"                                  # helps manage buffers
thiserror = "2"                             # error handling
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "~0.7", features = ["codec", "tracing"] }
tokio-stream = "~0.1"
futures = "~0.3"
binrw = "~0.14"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
log = "0.4.22"